--- a/svd/Makefile
+++ b/svd/Makefile
@@ -1,6 +1,6 @@
 KOKKOS_PATH = ${HOME}/code/kokkos/kokkos
 KOKKOSKERNELS_PATH = ${HOME}/code/kokkos/kokkos-kernels
-KOKKOS_DEVICES = "OpenMP"
+KOKKOS_DEVICES = "Cuda"
 EXE_NAME = "svd"
 USE_KOKKOSKERNELS = "yes"
 
@@ -11,9 +11,9 @@ default: build
 
 
 ifneq (,$(findstring Cuda,$(KOKKOS_DEVICES)))
-CXX = ${KOKKOS_PATH}/config/nvcc_wrapper
+CXX = ${KOKKOS_PATH}/bin/nvcc_wrapper
 EXE = ${EXE_NAME}.cuda
-KOKKOS_ARCH = "Power8,Kepler30"
+KOKKOS_ARCH = "SNB,Pascal61"
 KOKKOS_CUDA_OPTIONS = "enable_lambda"
 else
 CXX = g++
